--- a/css/main.css
+++ b/css/main.css
@@ -97,20 +97,20 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #f16059;
   height: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
   padding: 2em;
-  font-size: 1.25em;
+  font-size: 1em;
   height: 100%;
 }
 
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
+  font-weight: 400;
   display: flex;
   justify-content: space-between;
 }
@@ -121,11 +121,18 @@ body {
   line-height: 1.5em;
   font-size: 1.6em;
   background-color: #f16059;
-  height: 300px;
+  height: 350px;
   display: flex;
   width: 30%;
   justify-content: center;
-  align-items: center;
+  align-items: center
+}
+
+.div-2 {
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  padding-left: 50px;
+  padding-right: 40px;
 }
 
 
