--- a/css/main.css
+++ b/css/main.css
@@ -99,44 +99,41 @@ textarea {
 html {
   background-color: #f16059;
   height: 100%;
+  width: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
   padding: 2em;
-  font-size: 1em;
+  color: #fff;
+  /*font-size: 1em;*/
   height: 100%;
 }
 
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
-  font-weight: 400;
+  /*font-weight: 400;*/
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 350px;
+  /*font-size: 1.6em;--*/
+  font-size: 1.25em;
+  /*background-color: #f16059;*/
+  /*height: 350px;--*/
+  height: auto;
   display: flex;
-  width: 30%;
+  /*width: 30%;--*/
   justify-content: center;
   align-items: center
 }
-
-.div-2 {
-  border-left: 1px solid white;
-  border-right: 1px solid white;
-  padding-left: 50px;
-  padding-right: 40px;
-}
-
-
-
 
 /* ==========================================================================
    Helper classes
@@ -217,7 +214,17 @@ body {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+@media all and (min-width: 1200px){
+    .div-1, .div-2, .div-3{
+      flex-basis: 30%
 
+    }
+    .div-1, .div-2 {
+      border-right: 1px solid #fff;
+      padding-right: 30px;
+      height: 200px;
+    }
+}
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
        (min-resolution: 1.25dppx),
