--- a/css/main.css
+++ b/css/main.css
@@ -104,36 +104,69 @@ html {
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 400;
-  padding: 2em;
-  color: #fff;
-  /*font-size: 1em;*/
-  height: 100%;
-}
-
-.wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  /*font-weight: 400;*/
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
-.div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
-  line-height: 1.5em;
-  /*font-size: 1.6em;--*/
+  padding: 0em 2em;
   font-size: 1.25em;
-  /*background-color: #f16059;*/
-  /*height: 350px;--*/
-  height: auto;
+  color: #fff;
   display: flex;
-  /*width: 30%;--*/
   justify-content: center;
-  align-items: center
 }
+
+.flex-containter {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  max-width: 1200px;
+}
+
+p span {
+  font-family: 'Lora', sans-serif;
+}
+
+header,
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+header h1{
+  font-family: 'Lora', sans-serif;
+  font-size: 3em;
+}
+
+main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid #fff;
+}
+ main p {
+  font-size: 1.35;
+ }
+
+ .flex-items {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   line-height: 1.5em;
+   font-size: 1em;
+   border-bottom: 1px solid #fff;
+ }
+
+ footer {
+   border-top: 1px solid #fff;
+ }
+
+ footer ul li {
+   display: inline-block;
+ }
+
+ footer li {
+   padding-top: 5px;
+   padding-bottom: 0px;
+   padding-left: 0px;
+   padding-right: 15px;
+ }
 
 /* ==========================================================================
    Helper classes
@@ -214,17 +247,25 @@ body {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
-@media all and (min-width: 1200px){
-    .div-1, .div-2, .div-3{
-      flex-basis: 30%
-
-    }
-    .div-1, .div-2 {
-      border-right: 1px solid #fff;
-      padding-right: 30px;
-      height: 200px;
+@media all and (min-width: 768px){
+    body {
+      padding: 1em;
     }
 }
+
+@media (min-width: 1200px) {
+    .flex-items {
+      flex-basis: 30%;
+      border-bottom: none;
+    }
+
+    #div-2 p {
+      border-left: 1px solid #fff;
+      border-right: 1px solid #fff;
+      padding: 0 40px;
+    }
+}
+
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
        (min-resolution: 1.25dppx),
